--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-app-push-update": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
