--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,13 @@
 {
   "extends": "./tsconfig",
-  "exclude": ["example", "lib"]
+  "compilerOptions": {
+    "outDir": "lib",
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": false,
+    "composite": false,
+    "jsx": "react-native"
+  },
+  "include": ["src"],
+  "exclude": ["example", "lib", "node_modules"]
 }
