--- a/android/build.gradle
+++ b/android/build.gradle
@@ -75,6 +75,7 @@ dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+  implementation 'com.google.firebase:firebase-messaging:23.4.0'
 }
 
 react {
