--- a/example/ios/AppPushUpdateExample/Info.plist
+++ b/example/ios/AppPushUpdateExample/Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>rn_app_push_update_key</key>
+  	<string>no_key</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
